--- a/debian/rules
+++ b/debian/rules
@@ -214,6 +214,11 @@ endif
 	mv debian/isdnvboxclient/usr/share/man/man1/vboxconvert.1 \
 	    debian/isdnvboxclient/usr/share/man/man1/vboxcnvt.1
 
+	mkdir -p debian/isdnutils-xtools/usr/share/man/man1/
+	mv debian/isdnutils-xtools/usr/man/man1/xisdnload.1x \
+	    debian/isdnutils-xtools/usr/share/man/man1/xisdnload.1x
+	rmdir -p --ignore-fail-on-non-empty debian/isdnutils-xtools/usr/man/man1
+
 # Build architecture-independent files here.
 # Pass -i to all debhelper commands in this target to reduce clutter.
 binary-indep: DH_OPTIONS=-i
