--- a/debian/control
+++ b/debian/control
@@ -148,7 +148,7 @@ Description: ISDN answering machine, client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
+Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, update-inetd
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
