--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Paul Slootman <paul@debian.org>
 Uploaders: Paul Slootman <paul@debian.org>, Matthias Klose <doko@debian.org>
 Standards-Version: 3.7.2
-Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xutils | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.8, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release
+Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xutils | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.8, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
 
 Package: isdnutils
 Priority: optional
@@ -148,7 +148,7 @@ Description: ISDN answering machine, client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, update-inetd
+Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
