--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: isdnutils
 Section: utils
 Priority: extra
-Maintainer: Paul Slootman <paul@debian.org>
-Uploaders: Matthias Klose <doko@debian.org>
+Maintainer: Debian QA Group <packages@qa.debian.org>
+Uploaders: Paul Slootman <paul@debian.org>
 Standards-Version: 3.7.3
 Build-Depends: debhelper (>=5), bzip2, libncurses5-dev | libncurses-dev, xutils-dev | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
 
@@ -49,7 +49,7 @@ Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
-Depends: makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
+Depends: udev | makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -83,7 +83,7 @@ Description: ISDN utilities that use X
 Package: ipppd
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: net
-Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, makedev
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev
 Suggests: pdnsd
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: PPP daemon for syncPPP over ISDN
@@ -151,7 +151,7 @@ Description: ISDN answering machine, client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, makedev, ${misc:Depends}
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, udev | makedev, ${misc:Depends}
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
@@ -165,7 +165,7 @@ Description: ISDN answering machine, server
 
 Package: capiutils
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), makedev, ${misc:Depends}
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), udev | makedev, ${misc:Depends}
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
 Description: Utilities for CAPI-capable ISDN cards
