--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,6 @@ Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 s390 sh4 sparc sparc64
 Depends: isdnutils-base (= ${binary:Version}), isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, pppdcapiplugin, capiutils
-Conflicts: ipppd (<<1:3.1pre1b-23)
 Description: ISDN utilities - dependency package
  This package depends on the most frequently used components for an
  ISDN system using an internal adapter; they are not required for an
@@ -40,7 +39,6 @@ Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerp
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
 Depends: udev | makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
-Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities - minimal set
  This package provides the basic set of ISDN utilities needed to make use
  of an ISDN card. For more complete functionality, install the isdnutils
@@ -50,7 +48,6 @@ Package: isdnutils-xtools
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: x11
 Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities - graphical tools
  This package provides xmonisdn and xisdnload, which are graphical tools
  for ISDN. Each in its own way gives a visual indication of the status of
@@ -65,7 +62,6 @@ Description: ISDN utilities - graphical tools
 # Section: net
 # Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev, ${misc:Depends}
 # Suggests: pdnsd
-# Replaces: isdnutils (<<1:3.1pre1b-0)
 # Description: ISDN utilities - PPP daemon
 #  This package provides the specially modified version of the Point to
 #  Point Protocol daemon needed to connect to the Internet through an
@@ -75,7 +71,6 @@ Description: ISDN utilities - graphical tools
 Package: isdnlog
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, ${misc:Depends}
-Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities - connection logger
  This package provides a set of utilities that can log ISDN connections and
  calculate the cost of calls. If sufficient data is available, it can even
@@ -95,7 +90,6 @@ Package: isdnutils-doc
 Architecture: all
 Section: doc
 Depends: ${misc:Depends}
-Conflicts: isdnutils (<<1:3.1pre1b-1)
 Suggests: isdnutils-base (= ${source:Version})
 Description: ISDN utilities - documentation
  This package includes the FAQ and other miscellaneous documentation
@@ -103,7 +97,6 @@ Description: ISDN utilities - documentation
 
 Package: isdnvbox
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-Conflicts: isdnutils (<<1:3.1pre1b-1)
 Depends: isdnvboxclient, isdnvboxserver, ${misc:Depends}
 Recommends: sox
 Description: ISDN utilities - answering machine dependency package
@@ -115,10 +108,8 @@ Description: ISDN utilities - answering machine dependency package
 
 Package: isdnvboxclient
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-Conflicts: isdnutils (<<1:3.1pre1b-1), isdnvbox (<<1:3.1pre1b-2)
 Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils, ${misc:Depends}
 Suggests: isdnvboxserver
-Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities - answering machine client
  Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
@@ -129,10 +120,8 @@ Description: ISDN utilities - answering machine client
 
 Package: isdnvboxserver
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, udev | makedev, ${misc:Depends}
 Suggests: isdnvboxclient
-Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities - answering machine server
  Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
@@ -145,7 +134,6 @@ Description: ISDN utilities - answering machine server
 Package: capiutils
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), udev | makedev, ${misc:Depends}
-Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
 Description: ISDN utilities - tools for CAPI-capable cards
  Some ISDN cards (notably the AVM active cards, and the AVM passive cards
@@ -157,8 +145,6 @@ Package: libcapi20-3
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
-Conflicts: libcapi20, libcapi20-2
 Description: ISDN utilities - CAPI support libraries
  If you have an ISDN card with which CAPI works, you may be able to use
  CAPI-capable applications such as fax systems. At this point, AVM cards can
@@ -171,8 +157,6 @@ Package: libcapi20-dev
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: libdevel
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
-Conflicts: libcapi20, libcapi20-2
 Description: ISDN utilities - CAPI development libraries
  If you have an ISDN card with which CAPI works, you may be able to use
  CAPI-capable applications such as fax systems. At this point, AVM cards can
@@ -183,7 +167,7 @@ Description: ISDN utilities - CAPI development libraries
 
 Package: pppdcapiplugin
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-Depends: ppp (>=2.3.11), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: ppp (>= 2.4.4), ppp (<< 2.4.6), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Section: net
 Description: ISDN utilities - pppd plug-in for CAPI support
  Some ISDN cards can be used by CAPI utilities - for instance the AVM
@@ -195,7 +179,6 @@ Description: ISDN utilities - pppd plug-in for CAPI support
 # Package: isdnactivecards
 # Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 # Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-# Replaces: isdnutils (<<1:3.1pre1b-0)
 # Description: ISDN utilities - active ISDN card support
 #  This package provides firmware and firmware-loading utilities for active
 #  ISDN cards (the Eicon, Eicon Diva, IBM Active 2000, ICN, or PCBIT-D cards).
