--- a/debian/isdnvboxserver.config
+++ b/debian/isdnvboxserver.config
@@ -1,4 +1,5 @@
 #!/bin/sh
+set -e
 
 # Vars involved, and how they're used:
 #
@@ -17,7 +18,7 @@
 
 # Source debconf library.
 . /usr/share/debconf/confmodule
- 
+
 confmode="$1"
 prevvers="$2"
 
